--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,12 +2,12 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'jaffle_shop'
+name: 'dbank'
 version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'jaffle_shop'
+profile: 'dbank'
 
 # These configurations specify where dbt should look for different types of files.
 # The `source-paths` config, for example, states that models in this project can be
@@ -32,7 +32,17 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  my_new_project:
+  dbank:
       # Applies to all files under models/example/
-      example:
-          materialized: view
+      bronze:
+        +transient: false
+        +materialized: table
+        +database: bronze
+      silver: 
+        +transient: false
+        +materialized: table
+        +database: silver
+      gold: 
+        +transient: false
+        +materialized: table
+        +database: gold
